--- a/ai4industry-jacamo-template/build.gradle
+++ b/ai4industry-jacamo-template/build.gradle
@@ -11,16 +11,17 @@ repositories {
     // artifact repository for JaCaMo-related project
     maven { url "https://raw.githubusercontent.com/jacamo-lang/mvn-repo/master" }
     maven { url "https://repo.gradle.org/gradle/libs-releases" }
-    
-    maven { url 'https://jitpack.io' }
+  
+    // artifact repository for Hypermedea dependencies
+    maven { url 'https://hypermedea.github.io/maven' }
+
+    mavenLocal()
 }
 
 dependencies {
-    implementation('org.jacamo:jacamo:0.9')
-    implementation('com.github.Hypermedea:hypermedea:master-SNAPSHOT') {
-        // avoid logging level set to DEBUG
-        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
-    }
+    implementation('org.jacamo:jacamo:1.2.1')
+    implementation('org.hypermedea:hypermedea:0.4.2')
+    implementation('org.hypermedea:mqtt-binding:0.4.1')
 
     runtimeOnly('org.slf4j:slf4j-api:2.0.6')
     runtimeOnly('org.slf4j:slf4j-nop:2.0.6')
