--- a/ai4industry-jacamo-template/build.gradle
+++ b/ai4industry-jacamo-template/build.gradle
@@ -13,15 +13,17 @@ repositories {
     maven { url "https://repo.gradle.org/gradle/libs-releases" }
   
     // artifact repository for Hypermedea dependencies
-    maven { url 'https://hypermedea.github.io/maven' }
+    maven { url 'https://jitpack.io' }
 
     mavenLocal()
 }
 
 dependencies {
-    implementation('org.jacamo:jacamo:1.2.1')
-    implementation('org.hypermedea:hypermedea:0.4.2')
-    implementation('org.hypermedea:mqtt-binding:0.4.1')
+    implementation('org.jacamo:jacamo:0.9')
+    implementation('com.github.Hypermedea:hypermedea:0.3') {
+        // avoid logging level set to DEBUG
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+    }
 
     runtimeOnly('org.slf4j:slf4j-api:2.0.6')
     runtimeOnly('org.slf4j:slf4j-nop:2.0.6')
